# pymono

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/myapp/: pyproject.toml
apps/myapp/src/myapp/: __init__.py
apps/myapp/tests/: test_main.py
docs/: dependency-graph.md
libs/shared/: pyproject.toml
libs/shared/tests/: test_hello.py
scripts/: affected.py  check_deps.py  check_lock.sh  dep_graph.py  detect_changes.py
