[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nickyhof", email = "nicholas.hofbauer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["shared"]

[project.scripts]
myapp = "myapp:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
